# KickerPickerTracker

./: pyproject.toml
kickerpickertracker/app/: app.py
kickerpickertracker/static/css/: style.css
kickerpickertracker/templates/: index.html
